# A2_MatrixCal

./: CMakeLists.txt
include/: matrix.h
src/: main.cpp  matrix.cpp
test/: test.cpp
